# kia

./: .env.deploy.example  .env.example  .env.production  .gitignore  AGENTS.md  CLOUDFLARE_DEPLOYMENT.md  CONNECTORS.md  DEPLOYMENT.md  FAULT_TOLERANCE.md  OPEN_SOURCE_LLM_PROVIDERS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PRODUCTION_STATUS.md  README.md  STATUS.md  connectors.example.json  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  kia_native_boot.cmd  kia_native_run.ps1  kia_train.ps1  kia_watchdog.ps1
agents/: .dockerignore  Dockerfile  pyproject.toml  requirements-train.txt
agents/api/: main.py  openai_compat.py  security.py
agents/brain_build/: README.md  __init__.py  agent.py  eval.py  store.py  tools.py
agents/brain_chat/: __init__.py  audio.py  augment.py  vision.py  web_tools.py
agents/brain_connectors/: __init__.py  agent.py  client.py  pool.py
agents/brain_core/: __init__.py  a2a.py  base.py  cache.py  circuit_breaker.py  config.py  fallback.py  health.py  llm.py  metrics.py  persona.py  queue.py  router.py  trace_context.py  tracing.py  training_capture.py  types.py
agents/brain_crews/: __init__.py  research_crew.py  synthesis_crew.py
agents/brain_exec/: __init__.py  planner.py  runner_client.py  store.py
agents/brain_knowledge/: __init__.py  graph.py  graphrag.py  indexer.py  models.py  predictor.py  rag.py  retriever.py  user_model.py  vector_store.py
agents/brain_mcp/: server.py
agents/brain_memory/: __init__.py  conversations.py  conversations_sqlite.py  episodic.py  memory_native.py  models.py  procedural.py  semantic.py  store.py  working.py
agents/brain_n8n/: __init__.py  client.py  workflow.py
agents/brain_orchestrator/: __init__.py  planner.py  world_model.py
agents/brain_proactive/: __init__.py  scheduler.py  trigger.py  watcher.py
agents/brain_researchers/: __init__.py  code_researcher.py  web_researcher.py
(+123 files in other folders)
