[project]
name = "secondary-brain"
version = "0.1.0"
description = "Autonomous knowledge system with multi-layer memory and multi-agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "litellm>=1.16.0",
    "redis>=5.0.0",
    "weaviate-client>=4.4.0",
    "falkordb>=1.0.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-weaviate>=1.0.0",
    "langgraph>=0.0.40",
    "crewai>=0.28.0",
    "smolagents>=1.0.0",
    "agno>=1.0.0",
    "httpx>=0.26.0",
    "apscheduler>=3.10.0",
    "watchdog>=3.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "mcp>=1.0.0",
    "langfuse>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "brain_core",
    "brain_memory",
    "brain_knowledge",
    "brain_orchestrator",
    "brain_crews",
    "brain_researchers",
    "brain_proactive",
    "brain_n8n",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "smolagents.*",
    "falkordb.*",
    "pytesseract.*",
    "langfuse.*",
    "mcp.*",
    "litellm.*",
    "weaviate.*",
    "langgraph.*",
    "llama_index.*",
    "agno.*",
    "crewai.*",
    "watchdog.*",
    "graphrag_sdk.*",
    "dspy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agents/tests"]
markers = [
    "integration: marks tests as integration tests (require infrastructure)",
]
